-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: None
-
Fix Version/s: 1.9.0
-
Component/s: None
-
Labels:
-
Sprint:Resource Mgmt: RI-16 Sp 50
-
Story Points:3
If a role is only known to the master because of an agent with static reservations to that role, it will not be shown in the /roles and GET_ROLES APIs.
This is because the roles are tracked based on frameworks primarily. We'll need to update the tracking to include when there are agents with reservations.
- duplicates
-
MESOS-4741 Add role information for static reservation in /master/roles
-
- Resolved
-
- is related to
-
MESOS-9890 /roles and GET_ROLES does not always expose parent roles.
-
- Resolved
-